# EAAE

./: .gitignore  README.md
agilicious_internal/: Dockerfile  Doxyfile  README.md
agilicious_internal/agiros/agiros/: CMakeLists.txt  CMakeLists_ATMP_no_CATKIN_SIMPLE.txt  package.xml
agilicious_internal/agiros/agiros/include/agiros/: agisim.hpp  ros_pilot.hpp  ros_setpoint.hpp  ros_traj_visualizer.hpp
agilicious_internal/agiros/agiros/launch/bridges/: laird_to_sbus.launch  ros_to_ctrl.launch  ros_to_laird_example.launch  ros_to_msp_example.launch
agilicious_internal/agiros/agiros/launch/camera/: fpv_camera.launch
agilicious_internal/agiros/agiros/launch/flying_room/: flying_room_basecomputer_offboard.launch  flying_room_basecomputer_offboard_betaflight.launch  flying_room_basecomputer_onboard.launch  flying_room_quadrotor_offboard.launch  flying_room_quadrotor_offboard_betaflight.launch  flying_room_quadrotor_onboard.launch
agilicious_internal/agiros/agiros/launch/mavros/: betaflight.launch  betaflight_config.yaml  betaflight_pluginlists.yaml
agilicious_internal/agiros/agiros/launch/plotjuggler/: plotjuggler.launch
agilicious_internal/agiros/agiros/launch/real_world/: outdoor_basecomputer.launch  outdoor_quadrotor.launch  t265_only.launch
agilicious_internal/agiros/agiros/launch/simulation/: agisim.launch  base_quad_simulation.launch  simulation.launch
agilicious_internal/agiros/agiros/launch/tracking_arena/: arena_basecomputer_offboard_betaflight.launch  arena_basecomputer_onboard.launch  arena_basecomputer_onboard_betaflight.launch  arena_quadrotor_offboard_betaflight.launch  arena_quadrotor_onboard.launch  arena_quadrotor_onboard_betaflight.launch
agilicious_internal/agiros/agiros/launch/vrpn/: optitrack.launch  vicon.launch
agilicious_internal/agiros/agiros/parameters/: offboard_pilot.yaml  offboard_pilot_betaflight.yaml  onboard_pilot.yaml  onboard_pilot_betaflight.yaml  outdoor_pilot_betaflight.yaml  rotors_hummingbird_pilot.yaml  rotors_sim_pilot.yaml  simple_sim_outer_inner_ctrl_pilot.yaml  simple_sim_pilot.yaml  simulation.yaml
agilicious_internal/agiros/agiros/parameters/quads/: falcon.yaml  hummingbird.yaml
agilicious_internal/agiros/agiros/resources/gazebo_files/: basic_adjusted.world  basic_blocks.world  basic_enclosed.world  basic_enclosed_small.world  kingfisher.xacro  kingfisher_base.xacro  kingfisher_model.gazebo  pillars.world  simple1_small.world  simple_no_walls.world  test1.world  test2.world  very_simple.world
agilicious_internal/agiros/agiros/resources/gazebo_files/encloses_small.world/: model.config  model.sdf
agilicious_internal/agiros/agiros/resources/gazebo_files/no_walls_simple/: model.config  model.sdf
agilicious_internal/agiros/agiros/resources/gazebo_files/pillars/: model.sdf
agilicious_internal/agiros/agiros/resources/gazebo_files/simple1_map/: model.config  model.sdf
agilicious_internal/agiros/agiros/resources/gazebo_files/simple1_small/: model.config  model.sdf
agilicious_internal/agiros/agiros/resources/gazebo_files/very_simple/: model.config  model.sdf
agilicious_internal/agiros/agiros/resources/plotjuggler/: template.xml
agilicious_internal/agiros/agiros/resources/rviz/: arena.rviz  real_world.rviz  simulation.rviz
agilicious_internal/agiros/agiros/scripts/: publish_gt_pos.py
agilicious_internal/agiros/agiros/src/: agisim_node.cpp  ctrl_feedback_publisher.cpp  energy_estimator.cpp  energy_estimator_WITHOUT_SERVICE.cpp  laird_to_ctrl_bridge.cpp  laird_to_sbus_bridge.cpp  mockvio_node.cpp  node.cpp  odom_publisher_for_ego.cpp  ros_pilot.cpp  ros_to_ctrl_bridge.cpp  ros_to_laird_bridge.cpp  ros_to_msp_bridge.cpp  ros_traj_visualizer.cpp  sbus.cpp  uav_tf_broadcast.cpp  update_uav_pose_plugin.cpp
agilicious_internal/agiros/agiros/src/bridge/: ros_bridge.cpp  rotors_bridge.cpp
agilicious_internal/agiros/agiros/srv/: getEnergy.srv
agilicious_internal/agiros/manual_flight_interface/: CMakeLists.txt  package.xml
agilicious_internal/agiros/manual_flight_interface/include/manual_flight_interface/: joypad_axes_buttons.hpp  manual_flight_interface.hpp  rc_channels_switches.hpp
agilicious_internal/agiros/manual_flight_interface/launch/: manual_flight_interface.launch
agilicious_internal/agiros/manual_flight_interface/parameters/: default.yaml
agilicious_internal/agiros/manual_flight_interface/src/: manual_flight_interface.cpp
agilicious_internal/agiros/thrust_mapping/load_cell_ros_node/: CMakeLists.txt  package.xml
agilicious_internal/agiros/thrust_mapping/load_cell_ros_node/launch/: collect_data.launch
agilicious_internal/agiros/thrust_mapping/load_cell_ros_node/scripts/: collect_data.py  identify_thrust_map.py
agilicious_internal/agiros/thrust_mapping/load_cell_ros_node/src/: load_cell.cpp
energy_aware_autonomous_exploration/: CMakeLists.txt  README.md  package.xml
energy_aware_autonomous_exploration/config/: custom_octomap_config.yaml
energy_aware_autonomous_exploration/control/src/: hover_test.py  send_waypoint.py
energy_aware_autonomous_exploration/launch/: uav_spawn.launch
energy_aware_autonomous_exploration/perception/include/: custom_octomap_server.h  custom_octomap_server2.h  mapping_node.h
energy_aware_autonomous_exploration/perception/launch/: mapping.launch
energy_aware_autonomous_exploration/perception/src/: custom_octomap_server.cpp  custom_octomap_server2.cpp  mapping_node.cpp
energy_aware_autonomous_exploration/planning/include/: frontier_detector.h
energy_aware_autonomous_exploration/planning/launch/: publish_trajectory.launch  publish_waypoint.launch
energy_aware_autonomous_exploration/planning/src/: frontier_detector.cpp  frontier_detector_BACKUP.txt  frontier_detector_NO_ENERGY_.cpp  frontier_detector_OCTOMAP_TIMER.txt  frontier_detector_WORKING.cpp  trajectory_publisher.cpp  waypoint_publisher.cpp  waypoint_publisher_ATTEMPT.txt  waypoint_publisher_v0.cpp
energy_aware_autonomous_exploration/utilities/: energy_logger.cpp  map_entropy_calculator.cpp  performance_tracker.cpp  plot_energy.py  plot_entropy.py  plot_exp_rate.py
(+62 files in other folders)
