<package format="2">
  <name>autonomous_exploration</name>
  <version>0.0.1</version>
  <description>Autonomous UAV Exploration</description>

  <maintainer email="jacobelskamp@hotmail.com">jacobelskamp</maintainer>
  <license>BSD</license>

  <!-- Add catkin as a buildtool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>agiros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>quadrotor_msgs</depend>

  <depend>agiros</depend>
  <depend>local_planner</depend>
  <depend>project_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


</package>
