<?xml version="1.0"?>
<package format="2">
  <name>agiros</name>
  <version>0.0.1</version>
  <description>ROS-Wrapper for AgiLib</description>

  <maintainer email="foehn@ifi.uzh.ch">foehnph</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>agilib</depend>
  <depend>agiros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>message_generation</depend> 
  <depend>message_runtime</depend> 
  
  
  <!-- ADDED BY ME FOR GAZEBO , ALSO SEE CMAKELISTS-->
  <depend>gazebo_ros</depend>
  <!-- ADDED BY ME FOR TF BROADCAST -->
  <depend>tf</depend>
  

</package>
