<?xml version="1.0"?>
<package format="2">
  <name>manual_flight_interface</name>
  <version>0.0.0</version>
  <description>The manual_flight_interface package</description>
  
  <maintainer email="roangel@ifi.uzh.ch">Angel Romero</maintainer>
  <license>MIT</license>

  <author>Matthias Faessler, Angel Romero</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>agiros</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
