<?xml version="1.0"?>
<package format="2">
  <name>load_cell_ros_node</name>
  <version>0.0.0</version>
  <description>Driver for the ati load cell</description>

  <maintainer email="foehn@ifi.uzh.ch">foehnph</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
